# python-muranoclient

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  run_tests.sh  setup-centos.sh  setup.cfg  setup.py  setup.sh  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/cli/: index.rst  murano.rst
doc/source/contributor/: contributing.rst
glazierclient/v1/: sessions.py
muranoclient/: __init__.py  client.py  i18n.py  shell.py  version.py
muranoclient/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py
muranoclient/common/: base.py  exceptions.py  http.py  utils.py  yaqlexpression.py  yaqlexpression_legacy.py
muranoclient/glance/: __init__.py  artifacts.py  client.py
muranoclient/locale/en_GB/LC_MESSAGES/: muranoclient.po
muranoclient/openstack/common/: cliutils.py  gettextutils.py  importutils.py  jsonutils.py  strutils.py  version.py
muranoclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py
muranoclient/osc/: plugin.py
muranoclient/osc/v1/: action.py  category.py  deployment.py  environment.py  package.py  schema.py
muranoclient/tests/: base.py  fakes.py  test_common.py  test_common_http.py  test_methods.py  test_package_creator.py  test_shell.py  test_utils.py
muranoclient/tests/fixture_data/test-app/Classes/: testapp.yaml
muranoclient/tests/fixture_data/test-app/Resources/: Deploy.template
muranoclient/tests/functional/: muranoclient.py
muranoclient/tests/functional/cli/: murano_test_utils.py  test_murano.py  utils.py
muranoclient/tests/functional/cli/MockApp/Classes/: mock_muranopl.yaml
muranoclient/tests/functional/hooks/: post_test_hook.sh
muranoclient/tests/functional/simple_read_only/: murano_test_utils.py  test_murano.py
muranoclient/tests/functional/simple_read_only/MockApp/Classes/: mock_muranopl.yaml
muranoclient/tests/unit/: base.py  fakes.py  test_base.py  test_common_http.py  test_exc.py  test_methods.py  test_package_creator.py  test_shell.py  test_utils.py
muranoclient/tests/unit/fixture_data/empty-app/: manifest.yaml
muranoclient/tests/unit/osc/: test_plugin.py
muranoclient/tests/unit/osc/v1/: fakes.py  test_action.py  test_category.py  test_deployment.py  test_environment.py  test_package.py  test_schema.py
muranoclient/tests/unit/osc/v1/fixture_data/test-app/: ui.yaml
muranoclient/v1/: __init__.py  actions.py  artifact_packages.py  categories.py  client.py  deployments.py  environments.py  instance_statistics.py  packages.py  request_statistics.py  schemas.py  services.py  sessions.py  shell.py  static_actions.py  statistics.py  templates.py
muranoclient/v1/package_creator/: hot_package.py  mpl_package.py
playbooks/legacy/muranoclient-functional-test-mysql-backend/: run.yaml
python-muranoclient/locale/: python-muranoclient.pot
releasenotes/notes/: action-arguments-06a554f76783f3ed.yaml  add-environment-support-to-OSC-173b86ec631283b7.yaml  added-category-command-01cb9dab21ab4a7b.yaml  added-environment-command-85b31973e101fd1f.yaml  added-schemas-support-e4a6e44c7bac2751.yaml  added-static-actions-3d45f5cdc5491770.yaml  bug-1527045-97993f04757b4901.yaml  bug-1536121-51c42f77a9e97db1.yaml  bug-1629221-e7f1766eb9878f23.yaml  dep-exists-action-9af18bebcc0ef053.yaml  deprecate-murano-packages-service-glance-7d0052a5256adace.yaml  drop-py-2-7-7a44884ca5972df5.yaml  enable-openstack-client-support-a273e33d6c31e36e.yaml  environment-edit-7faf5c8e8a3d44ac.yaml  fix-owned-flag-e8b718c074c1c314.yaml  glare-endpoint-cdba1b2351c19592.yaml  global-inherits-fix-6da007ec44a774f2.yaml  import-package-from-directory-8f2b5e393004ef97.yaml  improved-cli-outputs-a3e75cf0224a1993.yaml  list-environments-of-a-given-project-e407dd5271649ad2.yaml  multi-class-yamls-support-914b3d155324214f.yaml  multiple-packages-glare-fix-b82a473ad976028f.yaml  osc-murano-url-507932234b49cf9f.yaml  osc-package-list-command-23e39dc92ead8834.yaml  reauth-fix-e03ad966c3178167.yaml  repair-package-update-command-72e4c85da1b2c897.yaml  requirements-order-19ecc40ca6d34739.yaml  resources-dir-for-hot-c557c1472bbc79fa.yaml  support-endpoint-type-d7c6b32098b67eeb.yaml  yamlloader-glare-d7d0506f6711b650.yaml
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/fr/LC_MESSAGES/: releasenotes.po
tests/: test_client_with_fake_http.py  test_methods.py
tests/glazierclient/: test_client_with_fake_http.py
tests/muranoclient/: test_client_with_fake_http.py  test_methods.py
tools/: cover.sh  install_venv.py  install_venv_common.py  murano.bash_completion  pip-requires  tox_install.sh
