[metadata]
name = python-muranoclient
summary = python-muranoclient
description-file =
    README.rst
license = Apache License, Version 2.0
author = Mirantis, Inc.
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/murano/
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
        muranoclient

[entry_points]
console_scripts =
    murano = muranoclient.shell:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[compile_catalog]
directory = python-muranoclient/locale
domain = python-muranoclient

[update_catalog]
domain = muranoclient
output_dir = python-muranoclient/locale
input_file = python-muranoclient/locale/python-muranoclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = python-muranoclient/locale/python-muranoclient.pot
