[metadata]
name = python-muranoclient
summary = python-muranoclient
description-file =
    README.rst
license = Apache License, Version 2.0
author = Mirantis, Inc.
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/murano/
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
        muranoclient

[entry_points]
console_scripts =
    murano = muranoclient.shell:main

openstack.cli.extension =
    application_catalog = muranoclient.osc.plugin

openstack.application_catalog.v1 =
    environment_list = muranoclient.osc.v1.environment:ListEnvironments
    environment_show = muranoclient.osc.v1.environment:ShowEnvironment
    environment_rename = muranoclient.osc.v1.environment:RenameEnvironment
    environment_session_create = muranoclient.osc.v1.environment:EnvironmentSessionCreate
    environment_create = muranoclient.osc.v1.environment:EnvironmentCreate
    environment_delete = muranoclient.osc.v1.environment:EnvironmentDelete
    environment_deploy = muranoclient.osc.v1.environment:EnvironmentDeploy
    environment_apps_edit = muranoclient.osc.v1.environment:EnvironmentAppsEdit

    category_list = muranoclient.osc.v1.category:ListCategories
    category_show = muranoclient.osc.v1.category:ShowCategory
    category_create = muranoclient.osc.v1.category:CreateCategory
    category_delete = muranoclient.osc.v1.category:DeleteCategory

    deployment_list = muranoclient.osc.v1.deployment:ListDeployment

    package_create = muranoclient.osc.v1.package:CreatePackage

    static-action_call = muranoclient.osc.v1.action:StaticActionCall
    class-schema = muranoclient.osc.v1.schema:ShowSchema

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[compile_catalog]
directory = muranoclient/locale
domain = muranoclient

[update_catalog]
domain = muranoclient
output_dir = muranoclient/locale
input_file = muranoclient/locale/muranoclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = muranoclient/locale/muranoclient.pot
