[metadata]
name = python-muranoclient
summary = python-muranoclient
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-muranoclient/latest/
python-requires = >=3.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
        muranoclient

[entry_points]
console_scripts =
    murano = muranoclient.shell:main

openstack.cli.extension =
    application_catalog = muranoclient.osc.plugin

openstack.application_catalog.v1 =
    environment_list = muranoclient.osc.v1.environment:ListEnvironments
    environment_show = muranoclient.osc.v1.environment:ShowEnvironment
    environment_rename = muranoclient.osc.v1.environment:RenameEnvironment
    environment_session_create = muranoclient.osc.v1.environment:EnvironmentSessionCreate
    environment_create = muranoclient.osc.v1.environment:EnvironmentCreate
    environment_delete = muranoclient.osc.v1.environment:EnvironmentDelete
    environment_deploy = muranoclient.osc.v1.environment:EnvironmentDeploy
    environment_apps_edit = muranoclient.osc.v1.environment:EnvironmentAppsEdit
    environment_model_show = muranoclient.osc.v1.environment:EnvironmentModelShow
    environment_model_edit = muranoclient.osc.v1.environment:EnvironmentModelEdit

    category_list = muranoclient.osc.v1.category:ListCategories
    category_show = muranoclient.osc.v1.category:ShowCategory
    category_create = muranoclient.osc.v1.category:CreateCategory
    category_delete = muranoclient.osc.v1.category:DeleteCategory

    deployment_list = muranoclient.osc.v1.deployment:ListDeployment

    package_create = muranoclient.osc.v1.package:CreatePackage
    package_list = muranoclient.osc.v1.package:ListPackages
    package_delete = muranoclient.osc.v1.package:DeletePackage
    package_import = muranoclient.osc.v1.package:ImportPackage
    package_show = muranoclient.osc.v1.package:ShowPackage
    package_update = muranoclient.osc.v1.package:UpdatePackage
    package_download = muranoclient.osc.v1.package:DownloadPackage

    bundle_import = muranoclient.osc.v1.package:ImportBundle

    static-action_call = muranoclient.osc.v1.action:StaticActionCall
    class-schema = muranoclient.osc.v1.schema:ShowSchema
